--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,89 +1,79 @@
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mingle</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-    <style>
-    @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-</style>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Mingle</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Lato&display=swap');
+  </style>
 
-  </head>
+</head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-          <img src="https://res.cloudinary.com/dm6a8aocc/image/upload/v1673520510/mingle/mingleicon_on8eou.png"
-  alt="Logo" width="50"height="50" class="d-inline-block align-text-top"/> </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-    
-                {{#if userDetails}}
+<body>
 
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/auth/profile/{{userDetails._id}}">Profile</a>
-                </li>
-<li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/inbox">Inbox</a>
-            </li>
-
-             <div id ="nav-form">
-                   <form class="d-flex" id="logout-form" action="/auth/logout" method="GET">
-               <li class="nav-item">
-                  <img src="{{userDetails.profilePicture}}" alt="Profile picture" style="width: 50px;">
-                </li>
-          <li class="nav-item hello"> Hello,{{userDetails.username}}</li>
-                <li class="nav-item"><button id = "logout-btn">Logout</button></li>
-            </form>
-           </div>
-      
-        {{else}}
-         <li class="nav-item">
-          <a  class="nav-link active" aria-current="page" href="/auth/signup">Signup</a>
-         </li>
-          <li class="nav-item"> 
-            <a class="nav-link active" aria-current="page" href="/auth/login">Login</a>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">
+        <img src="https://res.cloudinary.com/dm6a8aocc/image/upload/v1673520510/mingle/mingleicon_on8eou.png" alt="Logo"
+          width="50" height="50" class="d-inline-block align-text-top" /> </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active nbs" aria-current="page" href="/">Home</a>
           </li>
-       
-        {{/if}}
-        
- 
-        
- 
-      </li>
-    </ul>
-    
+
+          {{#if userDetails}}
+
+          <li class="nav-item">
+            <a class="nav-link active nbs" aria-current="page" href="/auth/profile/{{userDetails._id}}">Profile</a>
+          </li>
+
+          <div id="nav-form">
+            <form class="d-flex" id="logout-form" action="/auth/logout" method="GET">
+            <div class="pp-div1">
+              <li class="nav-item">
+                <img src="{{userDetails.profilePicture}}" alt="Profile picture" style="width: 50px; border-radius: 10%">
+              </li>
+              <li class="nav-item hello"> Hello, {{userDetails.username}}!</li>
+              <li class="nav-item"><button class="nbs" id="logout-btn">Logout</button></li>
+              </div>
+            </form>
+          </div>
+
+          {{else}}
+          <li class="nav-item">
+            <a class="nav-link active nbs" aria-current="page" href="/auth/signup">Signup</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active nbs" aria-current="page" href="/auth/login">Login</a>
+          </li>
+          {{/if}}
+
+
+
+
+          </li>
+        </ul>
+
 
   </nav>
 
 
-    {{{body}}}
+  {{{body}}}
 
-<script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/js/script.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script src="/js/script.js"></script>
+</body>
 
 </html>
