--- a/views/comments/comment-edit.hbs
+++ b/views/comments/comment-edit.hbs
@@ -1,7 +1,21 @@
-<h2>Edit comment</h2>
-<form action="/subreddit/comment/{{commentDetails._id}}/edit" method="post">
-  <textarea name="text" cols="40" rows="10" minlength="5" maxlength="1000">{{commentDetails.text}}</textarea>
+<div class="crud-div">
+  <a href="javascript:history.back()"><button class="btn custom-btn btn1-lp" id="go-back-btn"><svg
+        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+      </svg>Go Back</button></a>
+</div>
 
-  <button type="submit">Update</button>
+<div class="crud-div">
+<h2>Edit comment</h2>
+  <hr class="crud-bar">
+<form action="/subreddit/comment/{{commentDetails._id}}/edit" method="post">
+<label class="crud-labels">Your comment:
+<textarea class="form-control" name="text" cols="60" rows="10" minlength="5" maxlength="1000">{{commentDetails.text}}</textarea>
+</label>
+<br>
+  <button class="btn custom-btn btn1-lp" id="crud-btn-update" type="submit">Update</button>
 
 </form>
+</div>
