--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,2 +1,15 @@
-<h1>Error!</h1>
-<h2>There was an error on the server! Check the console!</h2>
+<div class="crud-div">
+  <a href="javascript:history.back()"><button class="btn custom-btn btn1-lp" id="go-back-btn"><svg
+        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+      </svg>Go Back</button></a>
+</div>
+
+<div class="crud-div">
+<h1>Error</h1>
+<hr>
+<h3>Oops, something went wrong. Please try again later.</h3>
+</div>
+
