--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,15 +1,17 @@
 
-
-<br>
-
-<header>
+<header class="header-lp">
  <!-- Jumbotron -->
-  <div class="p-5 text-center bg-light">
-    <h1 class="mb-3">Mingle</h1>
-    <h4 class="mb-3">Welcome to your one stop for all Information</h4>
-    <a class="btn btn-primary" href="/subreddit/create" role="button">Create Subreddit</a>
-    <a class="btn btn-primary" href="subreddit" role="button">List of Subreddits</a>
-     <a class="btn btn-primary" href="post/create" role="button">Create a Post</a>
+  <div class="img-lp">
+    <div class="lp">
+    <h1 class="mingle-lp">mingle</h1>
+    <h4>Welcome to your one stop for all information</h4>
+    <hr class="line-lp">
+
+    <a class="btn custom-btn btn1-lp" href="subreddit" role="button">Communities</a>
+<br>
+    <a class="btn custom-btn btn2-lp" href="/subreddit/create" role="button">Create a Community</a>
+     <a class="btn custom-btn btn2-lp" href="post/create" role="button">Create a Post</a>
+    </div>
   </div>
   <!-- Jumbotron -->
 </header>
