--- a/views/subreddit/edit.hbs
+++ b/views/subreddit/edit.hbs
@@ -1,15 +1,34 @@
-<h1> Edit {{subreddit.name}}</h1>
+<div class="crud-div">
+  <a href="javascript:history.back()"><button class="btn custom-btn btn1-lp" id="go-back-btn"><svg
+        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+      </svg>Go Back</button></a>
+</div>
+
+<div class="crud-div">
+<h1>Edit {{subreddit.name}}</h1>
+<hr class="crud-bar">
 
 <form action="/subreddit/{{subreddit._id}}/edit" method="post" enctype="multipart/form-data">
-   <div class="form-group">
-      <label for="name">Title</label>
+      <label class="crud-labels" style="width: 800px;" for="name">Title
       <input type="text" class="form-control" id="name" name="name" value="{{subreddit.name}}">
-   </div>
-   <div class="form-group">
-      <label for="description">Description</label>
+      </label>
+
+      <br>
+
+      <label class="crud-labels" style="width: 800px;" for="description">Description
       <input type="text" class="form-control" id="description" name="description" value="{{subreddit.description}}">
-   </div>
-    <label>Picture:
-      <input type="file" name="img" />
+      </label>
+
+      <br>
+
+    <label class="crud-labels">Picture:
+      <input class="crud-img" type="file" name="img" />
     </label>
-   <button type="submit" class="btn btn-primary">Submit</button>
+
+    <br>
+
+   <button class="btn custom-btn btn1-lp" id="crud-btn-update" type="submit" class="btn btn-primary">Submit</button>
+</div>
