--- a/views/users/user-delete.hbs
+++ b/views/users/user-delete.hbs
@@ -1,7 +1,21 @@
-<h2>Is this goodbye?</h2>
+<div class="crud-div">
+    <a href="javascript:history.back()"><button class="btn custom-btn btn1-lp" id="go-back-btn"><svg
+                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+            </svg>Go Back</button></a>
+</div>
 
-<p>Are you sure you don't want to reconsider? Once you delete your account, there's no getting it back.</p>
-<form action="/auth/profile/{{userInSession._id}}/delete" method="post">
-    <input type="text" name="userDeletion" placeholder="Type in your username">
-    <button>Delete my account</button>
-</form>
+<div class="crud-div">
+    <h2>Is this goodbye?</h2>
+    <hr class="crud-bar">
+
+    <h4>Are you sure you don't want to reconsider? Once you delete your account, there's no getting it back.</h4>
+    <br>
+    <form action="/auth/profile/{{userInSession._id}}/delete" method="post">
+        <input class="input-text-crud" type="text" name="userDeletion" placeholder="Type in your username"> <br>
+        <button class="btn custom-btn btn1-lp" id="crud-btn-delete">Delete my account</button>
+    </form>
+
+</div>
