--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,10 +8,10 @@
     <h4>Welcome to your one stop for all information</h4>
     <hr class="line-lp">
 
-    <a class="btn custom-btn btn1-lp" href="subreddit" role="button">Communities</a>
+    <a class="btn custom-btn btn1-lp" id="btn1-lp" href="subreddit" role="button">Communities</a>
 <br>
-    <a class="btn custom-btn btn2-lp" href="/subreddit/create" role="button">Create a Community</a>
-     <a class="btn custom-btn btn2-lp" href="post/create" role="button">Create a Post</a>
+    <a class="btn custom-btn btn2-lp" id="btn2-lp" href="/subreddit/create" role="button">Create a Community</a>
+     <a class="btn custom-btn btn2-lp"id="btn2-lp" href="post/create" role="button">Create a Post</a>
     </div>
   </div>
   <!-- Jumbotron -->
