fixed the login and signup buttons and changed the background color

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,3 +1,5 @@
+<body class="body-index">
+  
 <div class="credentials-div">
   <h2 class="titles">Log In</h2>
 
@@ -15,7 +17,7 @@
       <input class="input-text-crud" type="password" name="password" placeholder="Your password" />
     </label>
 
-    <button class="btn custom-btn btn2-lp" type="submit">Log In</button>
+    <button class="btn custom-btn btn2-lp"  id="btn2-lp" type="submit">Log In</button>
 </form>
 
     {{#if errorMessage}}
@@ -24,3 +26,5 @@
     
 </div>
 </div>
+
+</body>
