--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,5 @@
-<div class="credentials-div">
+<body class="body-index">
+  <div class="credentials-div">
   <h2 class="titles">Sign Up</h2>
 
 
@@ -18,7 +19,7 @@
         <input class="input-text-crud" type="password" name="password" placeholder="Your password" />
       </label>
 
-      <button class="btn custom-btn btn1-lp" type="submit">Sign Up</button>
+      <button class="btn custom-btn btn1-lp" id="btn1-lp" type="submit">Sign Up</button>
   </form>
 
   {{#if errorMessage}}
@@ -26,3 +27,4 @@
   {{/if}}
 </div>
 </div>
+</body>
