--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -1,4 +1,5 @@
-{{#if userInSession}}
+<body class="body-index">
+  {{#if userInSession}}
 <div class="img-up"></div>
 <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
 
@@ -59,3 +60,4 @@
   </div>
 </div>
 </div>
+</body>
