--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -21,7 +21,7 @@
 </form>
 
     {{#if errorMessage}}
-      <p class="error">{{errorMessage}}</p>
+      <p class="error" id="error-credentials">{{errorMessage}}</p>
     {{/if}}
     
 </div>
